# gtkalkulator

./: .gitignore  CMakeLists.txt  CalculatorWindow.cpp  CalculatorWindow.h  main.cpp  style.css
